syntax = "proto3";

package erc4626;

//enum TransferType {
//  SUPPLY = 0;
//  BORROW = 1;
//  REPAY = 2;
//  WITHDRAW = 3;
//}

message Transfers {
  repeated Transfer transfers = 1;
}

message Transfer {
  string id = 1;
  string token_address = 2;
  uint64 value = 3;
}

message Erc4626Asset {
  string id = 1;
  string address = 2;
  string name = 3;
  string symbol = 4;
  uint64 decimals = 5;
  //  uint64 total_supply = 6;
  string asset = 6;
  uint64 total_assets = 7;
}

message Erc4626Assets {
  repeated Erc4626Asset erc4626_assets = 1;
}